# spark-streaming

./: .gitignore  build.gradle  makefile  readme.md  settings.gradle
airflow/: MySQLTest.py  PostgresTest.py
airflow/src/: dag_my_learn.py  dag_mysql_ingest.py  dag_postgres_ingest.py
gradle/scripts/: jvm-args-java17.gradle
gradle/wrapper/: gradle-wrapper.properties
k8s/: k8s.excalidraw  kind-config.yaml  readme.md
k8s-jupyter/: jupyter-notebook.yaml  jupyter-role.yaml  jupyter-spark.yaml  jupyter-storage.yaml  readme.md
k8s-jupyter/image/: Dockerfile  Dockerfile2  readme.md
k8s-jupyter/notebooks/: legacy_way.ipynb  legacy_way_in_pod.ipynb  scala_local.ipynb  spark-connect-local.ipynb  spark-connect.ipynb  spark-connect_pod.ipynb
k8s-spark/: readme.md
k8s-spark/example-jobs/: spark-pi-example.yaml
k8s-spark/pvc/: custom-jars-loader-job.yaml  (+8 more)
kafka-connect/: build.gradle
python/: dynamo-test.py  pyproject.toml  readme.md  requirements.txt
spark-k8s/: readme.md  spark-history-server.yaml  spark-pi-example.yaml
spark-kafka/: build.gradle
spark-ml/: build.gradle
udfs/: build.gradle
word-count/: build.gradle  readme.md
word-count-sc/: build.gradle  pyproject.toml  readme.md
word-count-sc/src/main/scala/com/chen/guo/: WordCountSparkConnectIDE.scala
word-count-sc/src/python/: WordCountSparkConnectIDE.py  WordCountSparkConnectIDE2.py  fun.py
word-count-sc/src/python/pyspark_driver/: driver.py
word-count-sc/src/python/through_wrapper/word_count/: WordCountSparkApp.py
word-count-sc/src/python/word_count/: WordCountSparkConnectIDE2.py
(+170 files in other folders)
