[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordcount-sc"
version = "0.1.0"
description = "WordCount Spark Connect examples"
authors = [{ name = "Chen" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src/python"]
